--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "electron-updater": "^6.1.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
