--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hd-toolbox",
   "version": "1.0.0",
-  "description": "An Electron application with React",
+  "description": "Desktop app for faster 3rd party games preparation",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "Goran Kolar",
+  "license": "ISC",
+  "homepage": "https://github.com/GoranK89/hd-toolbox",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -12,9 +13,9 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:win": "npm run build && electron-builder --win --config=build/win.json",
+    "build:mac": "npm run build && electron-builder --mac --config=build/mac.json",
+    "build:linux": "npm run build && electron-builder --linux --config=build/linux.json"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
@@ -37,5 +38,39 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^4.4.9"
+  },
+  "build": {
+    "appId": "com.hdtoolbox.app",
+    "productName": "HdToolbox",
+    "files": [
+      "dist/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "mac": {
+      "target": "dmg",
+      "category": "public.app-category.utilities",
+      "hardenedRuntime": true,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist",
+      "gatekeeperAssess": false
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Utility"
+    }
   }
 }
