added background folder to build json

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "files": [
       "dist/**/*",
       "node_modules/**/*",
+      "src/renderer/src/assets/**/*",
       "package.json"
     ],
     "directories": {
